k8s/namespace_config_secrets.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: microservices
