k8s/postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-postgres
  namespace: microservices
spec:
  clusterIP: None
  selector:
    app: user-postgres
  ports:
    - port: 5432
      targetPort: 5432
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: user-postgres
  namespace: microservices
spec:
  selector:
    matchLabels:
      app: user-postgres
  serviceName: user-postgres
  replicas: 1
  template:
    metadata:
      labels:
        app: user-postgres
    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - name: postgres
          image: postgres:16
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: user-service-store
              mountPath: /var/lib/postgresql/data
          readinessProbe:
            exec:
              command: [ "sh", "-c", "pg_isready -U $POSTGRES_USER -d $POSTGRES_DB" ]
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 5
          livenessProbe:
            exec:
              command: [ "sh", "-c", "pg_isready -U $POSTGRES_USER -d $POSTGRES_DB" ]
            initialDelaySeconds: 15
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 5
  volumeClaimTemplates:
    - metadata:
        name: user-service-store
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: auth-postgres
  namespace: microservices
spec:
  clusterIP: None
  selector:
    app: auth-postgres
  ports:
    - port: 5432
      targetPort: 5432
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: auth-postgres
  namespace: microservices
spec:
  selector:
    matchLabels:
      app: auth-postgres
  serviceName: auth-postgres
  replicas: 1
  template:
    metadata:
      labels:
        app: auth-postgres
    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - name: postgres
          image: postgres:16
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: auth-service-store
              mountPath: /var/lib/postgresql/data
          readinessProbe:
            exec:
              command: [ "sh", "-c", "pg_isready -U $POSTGRES_USER -d $POSTGRES_DB" ]
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 5
          livenessProbe:
            exec:
              command: [ "sh", "-c", "pg_isready -U $POSTGRES_USER -d $POSTGRES_DB" ]
            initialDelaySeconds: 15
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 5
  volumeClaimTemplates:
    - metadata:
        name: auth-service-store
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: order-postgres
  namespace: microservices
spec:
  clusterIP: None
  selector:
    app: order-postgres
  ports:
    - port: 5432
      targetPort: 5432
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: order-postgres
  namespace: microservices
spec:
  selector:
    matchLabels:
      app: order-postgres
  serviceName: order-postgres
  replicas: 1
  template:
    metadata:
      labels:
        app: order-postgres
    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - name: postgres
          image: postgres:16
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: order-service-store
              mountPath: /var/lib/postgresql/data
          readinessProbe:
            exec:
              command: [ "sh", "-c", "pg_isready -U $POSTGRES_USER -d $POSTGRES_DB" ]
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 5
          livenessProbe:
            exec:
              command: [ "sh", "-c", "pg_isready -U $POSTGRES_USER -d $POSTGRES_DB" ]
            initialDelaySeconds: 15
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 5
  volumeClaimTemplates:
    - metadata:
        name: order-service-store
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
---
